<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background2"
        android:scaleType="centerCrop"
        />
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/White"
        android:padding="@dimen/padding_text"
        android:alpha="0.8"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:layout_centerHorizontal="true"
            android:id="@+id/menu"
            android:textColor="@color/colorTaxisLibres"
            android:textStyle="italic"
            android:textSize="@dimen/toolbar_text"
            android:textAllCaps="true"
            android:fontFamily="cursive"
            />
        <Button
            android:layout_marginTop="@dimen/margin_top"
            android:layout_below="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapa"
            android:textSize="@dimen/button_text"
            android:padding="@dimen/padding_text"
            android:id="@+id/buttonMapa"
            android:layout_centerHorizontal="true"
            android:background="@color/colorTaxisLibres"
            android:textColor="@color/White"
            android:fontFamily="cursive"
            android:alpha="1"

            />
        <Button
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peliculas"
            android:textSize="@dimen/button_text"
            android:padding="@dimen/padding_text"
            android:id="@+id/buttonPeliculas"
            android:layout_below="@+id/buttonMapa"
            android:layout_centerHorizontal="true"
            android:background="@color/colorTaxisLibres"
            android:textColor="@color/White"
            android:fontFamily="cursive"
            android:alpha="1"
            />
        <TextView
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonPeliculas"
            android:text="@string/autor"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorTaxisLibres"
            android:textSize="@dimen/button_text"
            android:fontFamily="cursive"
            />
    </RelativeLayout>
</RelativeLayout>