<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="mapViewModel"
            type="ViewModels.MapViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/contenedorMapa"
            android:orientation="vertical"
            android:background="@color/White"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/texto_origen_titulo"
                    android:layout_width="@dimen/ancho_ubicaciones"
                    android:layout_height="match_parent"
                    android:textColor="@color/White"
                    android:background="@color/colorTaxisLibres"
                    android:text="@string/origen"
                    android:paddingTop="@dimen/padding_text"
                    android:paddingBottom="@dimen/padding_text"
                    />
                <TextView
                    android:id="@+id/texto_origen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingStart="@dimen/padding_text"
                    android:textColor="@color/Black"
                    android:gravity="center_vertical"
                    android:background="@color/White"
                    android:text="@={mapViewModel.texto_origen}"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contenedor_click_destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="@{mapViewModel.vContenedorClickDestino}"
                >
                <Button
                    android:id="@+id/boton_agregar_destino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTaxisLibres"
                    android:text="@string/agregar_destino"
                    android:textColor="@color/White"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contenedor_destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="@{mapViewModel.vContenedorDestino}"
                >
                <TextView
                    android:id="@+id/texto_destino_titulo"
                    android:layout_width="@dimen/ancho_ubicaciones"
                    android:layout_height="match_parent"
                    android:text="@string/destino"
                    android:background="@color/colorTaxisLibres"
                    android:textColor="@color/White"
                    android:paddingTop="@dimen/padding_text"
                    android:paddingBottom="@dimen/padding_text"
                    />
                <TextView
                    android:id="@+id/texto_destino"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingStart="@dimen/padding_text"
                    android:textSize="@dimen/texto_ubicaciones"
                    android:textColor="@color/Black"
                    android:background="@color/White"
                    android:gravity="center_vertical"
                    android:text="@={mapViewModel.texto_destino}"
                    />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/boton_calcular_ruta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contenedorMapa"
            android:background="@color/DarkGreen"
            android:textColor="@color/White"
            android:text="@string/calcular"
            android:visibility="@{mapViewModel.vBotonCalcularRuta}"
            />
        <Button
            android:id="@+id/boton_resumen_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/boton_calcular_ruta"
            android:background="@color/DarkGreen"
            android:textColor="@color/White"
            android:text="@string/resumen_datos"
            android:visibility="@{mapViewModel.vBotonResumenDatos}"
            />
        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_below="@+id/contenedorMapa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/contenedor_botones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:visibility="@{mapViewModel.vContenedorBotones}"
            >
            <Button
                android:id="@+id/boton_resetear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/White"
                android:background="@color/colorTaxisLibres"
                android:text="@string/limpiar"
                android:padding= "@dimen/padding_text2"
                android:layout_marginRight="@dimen/distancia_botones"
                android:layout_marginEnd="@dimen/distancia_botones"
                />
            <Button
                android:id="@+id/boton_fijar_destino"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/White"
                android:background="@color/colorTaxisLibres"
                android:text="@string/fijar_destino"
                android:padding= "@dimen/padding_text2"
                android:layout_marginLeft="@dimen/distancia_botones"
                android:layout_marginStart="@dimen/distancia_botones"
                android:visibility="@{mapViewModel.vBotonFijarDestino}"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>